--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ flutter:
    - assets/images/one.jpg
    - assets/images/two.jpg
    - assets/images/three.jpg
+   - assets/images/grapevine.jpg
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
