--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   firebase_auth: ^0.15.5+2
   cloud_firestore: ^0.13.4+2
   provider: ^4.0.4
+  fluttertoast: ^4.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
